# olive

./: .env.example  .gitignore  MILESTONE_0_COMPLETE.md  MILESTONE_1_PROGRESS.md  QUICKSTART.md  README.md  pyproject.toml  requirements-snapshot.txt  test_pipeline.py
api/: __init__.py
app/: streamlit_app.py  streamlit_app_db.py
data/geo/: README.md  aegean_aoi.geojson  aegean_provinces.geojson  aegean_provinces_metadata.csv  aydin_boundary.geojson  balikesir_boundary.geojson  i̇zmir_boundary.geojson  manisa_boundary.geojson  mugla_boundary.geojson
data/interim/: cloud_masking_demo.html  ndvi_visualization.html  olive_mask_visualization.html
data/interim/provinces/: aydin_timeseries.json  balikesir_timeseries.json  i̇zmir_timeseries.json  manisa_timeseries.json  muğla_timeseries.json
data/labels/: PROVENANCE.md  turkey_olive_production.csv  turkey_olive_production_template.csv
database/: schema.sql
docs/: ARCHITECTURE.md  MILESTONE_0_PROGRESS.md  PRODUCT_VISION.md
models/: __init__.py
notebooks/: 01_milestone0_demo.ipynb
pipeline/: __init__.py  access.py  density.py  features.py  indices.py  mask.py  preprocess.py  quality.py  timeseries.py  utils.py
scripts/: add_missing_columns.py  add_missing_columns.sql  apply_schema.py  compute_metrics.py  compute_quality_only.py  convert_kml_to_geojson.py  create_province_boundaries_gee.py  download_province_boundaries.py  download_turkey_boundaries.py  download_weather_era5.py  load_data_to_db.py  process_provinces.py  process_single_province.py  test_db_connection.py  test_single_province.py  train_classifier.py
