[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oliveintel"
version = "0.1.0"
description = "Satellite-based olive tree health monitoring and production estimation for Turkey"
authors = [{name = "Can Karakoc", email = "cankarakoc@berkeley.edu"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core geospatial
    "earthengine-api>=0.1.400",
    "geemap>=0.32.0",
    "eemont>=0.3.6",

    # Raster processing
    "rasterio>=1.3.9",
    "xarray>=2024.1.0",
    "rioxarray>=0.15.0",

    # Spectral indices
    "spyndex>=0.6.0",

    # Cloud masking
    "s2cloudless>=1.7.0",

    # Vector/geospatial
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "fiona>=1.9.5",

    # Data manipulation
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",

    # ML/modeling
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",

    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "geoalchemy2>=0.14.0",

    # API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Storage
    "boto3>=1.34.0",
    "s3fs>=2024.2.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

streamlit = [
    "streamlit>=1.31.0",
    "leafmap>=0.30.0",
    "folium>=0.15.0",
]

titiler = [
    "titiler.core>=0.15.0",
    "titiler.extensions>=0.15.0",
]

foundation-models = [
    "torch>=2.2.0",
    "torchgeo>=0.5.0",
    "terratorch>=0.1.0",
]

all = [
    "oliveintel[dev,streamlit,titiler,foundation-models]",
]

[project.scripts]
oliveintel = "pipeline.cli:main"

[tool.setuptools]
packages = ["pipeline", "models", "api"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.geojson", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=pipeline --cov=models --cov=api --cov-report=term-missing"
